--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "docker:down": "docker-compose down -v",
     "docker:up": "docker-compose up -d",
     "clean:random": "rimraf ./data/*.json",
-    "start": " npm run clean:random && node main.js",
+    "start": "npm run clean:random && node main.js",
+    "start:generate": "node main.js",
     "create-database": "sh ./setup.sh"
   },
   "type": "module",
@@ -23,6 +24,8 @@
   "homepage": "https://github.com/zilahir/R0279-3003#readme",
   "dependencies": {
     "faker": "^5.5.3",
+    "globby": "^13.1.0",
+    "mysql": "^2.18.1",
     "random": "^3.0.6",
     "rimraf": "^3.0.2",
     "uuid": "^8.3.2"
