--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ansi-styles": "^5.2.0",
     "chalk": "^5.0.0",
+    "date-fns": "^2.28.0",
     "faker": "^5.5.3",
     "globby": "^13.1.0",
     "mysql": "^2.18.1",
