--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.28.0",
     "faker": "^5.5.3",
     "globby": "^13.1.0",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "random": "^3.0.6",
     "rimraf": "^3.0.2",
