--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "rimraf": "^3.0.2",
     "uuid": "^8.3.2"
   },
+  "engines": {
+    "node": ">=16"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
